--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.4.2
   flutter_secure_storage: ^9.0.0
+  json_annotation: ^4.8.0
+  retrofit: '>=4.0.0 <5.0.0'
+  logger: any
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
+  retrofit_generator: '>=7.0.0 <8.0.0'
   flutter_test:
     sdk: flutter
 
