--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   skeletons: ^0.0.3
   go_router: ^13.2.2
+  badges: ^3.1.2
 
 dev_dependencies:
   build_runner: ^2.3.3
