--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   skeletons: ^0.0.3
   go_router: ^13.2.2
   badges: ^3.1.2
+  uuid: ^4.3.3
 
 dev_dependencies:
   build_runner: ^2.3.3
