--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   go_router: ^13.2.2
   badges: ^3.1.2
   uuid: ^4.3.3
+  debounce_throttle: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.3.3
